@@ -87,8 +87,6 @@ buildParams.bwcVersions.withWireCompatible(supportedVersion) { bwcVersion, baseN
     testClassesDirs = sourceSets.csvSpecTest.output.classesDirs
     classpath = sourceSets.csvSpecTest.runtimeClasspath
     dependsOn generateEsqlSpecTests
-    jvmArgs('--add-opens=java.base/java.nio=ALL-UNNAMED')
-    systemProperty 'arrow.allocation.manager.type', 'Unsafe'
     // Restrict to the current-coordinator variant; the old-coordinator classes run under csvSpecTestsOldCoordinator.
     include '**/MixedClusterEsqlCurrentCoordinatorSpec*IT.class'
   }
@@ -101,8 +99,6 @@ buildParams.bwcVersions.withWireCompatible(supportedVersion) { bwcVersion, baseN
     testClassesDirs = sourceSets.csvSpecTest.output.classesDirs
     classpath = sourceSets.csvSpecTest.runtimeClasspath
     dependsOn generateEsqlSpecTests
-    jvmArgs('--add-opens=java.base/java.nio=ALL-UNNAMED')
-    systemProperty 'arrow.allocation.manager.type', 'Unsafe'
     include '**/MixedClusterEsqlOldCoordinatorSpec*IT.class'
   }
 
